--- a/hi.html
+++ b/hi.html
@@ -336,6 +336,7 @@
     
     <div class="scrollElement"></div>
       
+    <a href="test_form.html" target="_blank" class="btn btn_danger">test form</a>
     <a href="https://codepen.io/collection/DxkYzq" target="_blank" class="btn btn_works">My Works</a>
     <button class="btn" id="fullscr">Go Fullscreen</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js"></script>
